--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "SET NODE_ENV=production && nodemon app.js"
+        "start": "NODE_ENV=production nodemon app.js"
     },
     "author": "",
     "license": "ISC",
