--- a/server/config/.env.production
+++ b/server/config/.env.production
@@ -1,3 +1,3 @@
-CONNECTION_STRING="mongodb+srv://dbadmin:5ql4LLFK1qPXF3fB@techtube.xkwg3ot.mongodb.net/TechTitans?retryWrites=true&w=majority&appName=TechTube"
+CONNECTION_STRING="mongodb+srv://dbadmin:7qw7BG8ZCqswVuLi@techtubepublic.pkdao.mongodb.net/"
 PORT=80
 JWT_SECRET="5ql4LLFK1qPXF3fB"
